--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -71512,28 +71512,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = np.random.randint(low=0, high=4, size=(20,))\n",
+    "tru = np.random.randint(low=0, high=4, size=(20,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.00992627,  0.04524262,  0.01897666, ...,  0.09815302,\n",
-       "        -0.03195954, -0.01154737],\n",
-       "       [-0.02741307,  0.02852679,  0.03163458, ...,  0.06687995,\n",
-       "        -0.0338574 ,  0.02150605],\n",
-       "       [-0.03083228,  0.05407378,  0.01047603, ...,  0.08310957,\n",
-       "        -0.03368025,  0.03365675]], dtype=float32)"
+       "0.3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "messages = [\"has Related Synonym\", \"has Approximate Synonym\", \"has Exact Synonym\"]\n",
-    "extractUSEEmbeddings(messages)"
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "def calculate_recall(true, pred):\n",
+    "    true_f, pred_f = [], []\n",
+    "    for i,l in enumerate(true):\n",
+    "        if l!=4:\n",
+    "            true_f.append(l)\n",
+    "            pred_f.append(pred[i])\n",
+    "    return accuracy_score(true_f, pred_f)\n",
+    "\n",
+    "calculate_recall(tru, pred)\n"
    ]
   },
   {
