pushing pkl files

--- a/OntoEnricher/src/Train.ipynb
+++ b/OntoEnricher/src/Train.ipynb
@@ -797,23 +797,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11505"
+       "array([[  500,  4696],\n",
+       "       [ 3050,   814],\n",
+       "       [  562,  3673],\n",
+       "       [ 1869, 10349]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lines = \"\\n\".join([\"\\t\".join(l.split(\"\\t\")[:-1]) for l in open(\"../files/dataset/test_instances_validated.tsv\",\"r\").read().split(\"\\n\")[1:]])\n",
-    "open(\"../files/dataset/test_instances_new.tsv\", \"w+\").write(lines)"
+    "def myfunc(elem):\n",
+    "    return [emb_indexer_inv[elem[0]], emb_indexer_inv[elem[1]]]\n",
+    "\n",
+    "vfunc = np.vectorize(myfunc)\n",
+    "vfunc([1, 2, 3, 4], 2)"
    ]
   },
   {
