--- a/OntoEnricher/src/Final.ipynb
+++ b/OntoEnricher/src/Final.ipynb
@@ -307,23 +307,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39"
+       "[0.5,\n",
+       " 0.59,\n",
+       " 0.6,\n",
+       " 0.65,\n",
+       " 0.66,\n",
+       " 0.67,\n",
+       " 0.68,\n",
+       " 0.69,\n",
+       " 0.7,\n",
+       " 0.71,\n",
+       " 0.72,\n",
+       " 0.73,\n",
+       " 0.74,\n",
+       " 0.75,\n",
+       " 0.76,\n",
+       " 0.77,\n",
+       " 0.78,\n",
+       " 0.79,\n",
+       " 0.8,\n",
+       " 0.81]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "thresholds = [0.5, 0.59, 0.6, 0.65, 0.66, 0.67, 0.68, 0.69, 0.7, 0.71, 0.72, 0.73, 0.74, 0.75, 0.76, 0.77, 0.78, 0.79, 0.8, 0.81, 0.82, 0.83, 0.84, 0.85, 0.86, 0.87, 0.88, 0.89, 0.9, 0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99, 1.0]\n",
-    "len(thresholds)"
+    "thresholds[:20]"
    ]
   },
   {
