pushing unbracketed files

--- a/OntoEnricher/src/Final.ipynb
+++ b/OntoEnricher/src/Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "USE_link = \"https://tfhub.dev/google/universal-sentence-encoder-large/5?tf-hub-format=compressed\"\n",
     "model = hub.load(USE_link)\n",
     "\n",
-    "f = open(\"../junk/resolved_use.pkl\", \"rb\")\n",
+    "f = open(\"../junk/resolved_use_unbracketed.pkl\", \"rb\")\n",
     "resolved = pickle.load(f)\n",
     "\n",
     "def extractUSEEmbeddings(words):\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -148,81 +148,81 @@
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
       "0 35498\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "126 35372\n",
+      "122 35376\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "153 35345\n",
+      "148 35350\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "605 34893\n",
+      "579 34919\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "772 34726\n",
+      "735 34763\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "941 34557\n",
+      "896 34602\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "1102 34396\n",
+      "1048 34450\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "1357 34141\n",
+      "1292 34206\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "1596 33902\n",
+      "1515 33983\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "1816 33682\n",
+      "1698 33800\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "2062 33436\n",
+      "1912 33586\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "2322 33176\n",
+      "2139 33359\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "2519 32979\n",
+      "2299 33199\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "2924 32574\n",
+      "2648 32850\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "3252 32246\n",
+      "2917 32581\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "3572 31926\n",
+      "3186 32312\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "3889 31609\n",
+      "3460 32038\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "4356 31142\n",
+      "3871 31627\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "4676 30822\n",
+      "4142 31356\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "5027 30471\n",
+      "4454 31044\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "5352 30146\n",
+      "4730 30768\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "5748 29750\n",
+      "5091 30407\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "6153 29345\n",
+      "5462 30036\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "7402 28096\n",
+      "6663 28835\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "7818 27680\n",
+      "7047 28451\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "8135 27363\n",
+      "7331 28167\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "8389 27109\n",
+      "7564 27934\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "8734 26764\n",
+      "7882 27616\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "9041 26457\n",
+      "8168 27330\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "9354 26144\n",
+      "8464 27034\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "9759 25739\n",
+      "8854 26644\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "10053 25445\n",
+      "9129 26369\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "10321 25177\n",
+      "9384 26114\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "10583 24915\n",
+      "9633 25865\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "11070 24428\n",
+      "10103 25395\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "11477 24021\n",
+      "10506 24992\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "11554 23944\n",
+      "10581 24917\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "11625 23873\n",
+      "10642 24856\n",
       "Train len: 10739, Test len: 1197, Instance len: 275, Knocked len: 5538\n",
-      "12580 22918\n"
+      "12648 22850\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
     "    emb_vals = np.array(np.zeros((1, embeds.shape[1])).tolist() + embeds.tolist())\n",
     "\n",
     "\n",
-    "    output_file = \"../Input/data_use_\" + str(threshold) + \".pkl\"\n",
+    "    output_file = \"../Input/data_use_unbracketed_\" + str(threshold) + \".pkl\"\n",
     "    f = open(output_file, \"wb+\")\n",
     "    pickle.dump([nodes_train, paths_train, counts_train, targets_train, \n",
     "                 nodes_test, paths_test, counts_test, targets_test,\n",
@@ -347,16 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6935cf6d90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f692ecf7750>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
